Make stats in channel about page wider

--- a/LightTube/wwwroot/css/renderers.css
+++ b/LightTube/wwwroot/css/renderers.css
@@ -688,6 +688,7 @@
 	.renderer-channelaboutfullmetadatarenderer {
 		column-gap: 96px;
 		grid-template-areas: "description stats" "links stats";
+		grid-template-columns: auto 300px;
 	}
 }
 
