Fix wrong hyperlinks

--- a/LightTube/Views/Feed/Library.cshtml
+++ b/LightTube/Views/Feed/Library.cshtml
@@ -25,7 +25,7 @@
 				</div>
 			</a>
 			<div class="info">
-				<a href="#" class="ml-2 title" title="@playlist.Name">
+				<a href="/watch?v=@playlist.VideoIds.FirstOrDefault()&list=@playlist.Id" class="ml-2 title" title="@playlist.Name">
 					@playlist.Name
 				</a>
 				<div class="info__more">
