Fix titles turning into 6px line of dots and dashes
Even though LTv3 has localization, it won't support morse code

--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -230,6 +230,7 @@ a {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+    flex-shrink: 0;
 }
 
 .ml-1 {
