--- a/LightTube/Views/Shared/AccountDropdown.cshtml
+++ b/LightTube/Views/Shared/AccountDropdown.cshtml
@@ -29,11 +29,11 @@
 				</svg>
 			</label>
 			<div class="dropdown__menu" style="right:0">
-				<a href="/channel/@Model.User.LTChannelID" class="dropdown__item">
+				<a href="/channel/@Model.User.LTChannelId" class="dropdown__item">
 					<svg class="bi" width="20" height="20" fill="currentColor">
 						<use xlink:href="/svg/bootstrap-icons.svg#person-circle"/>
 					</svg>
-					@Model.Localization.FormatString("layout.dropdown.user", Model.User.UserID)
+					@Model.Localization.FormatString("layout.dropdown.user", Model.User.UserId)
 				</a>
 				<a href="/account/logout?redirectUrl=@HttpUtility.UrlEncode(Context.Request.Path)" class="dropdown__item">
 					<svg class="bi" width="20" height="20" fill="currentColor">
