--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -1770,6 +1770,10 @@ code {
     gap: 0 0;
 }
 
+.sidebar-collage__square {
+    grid-template-rows: 1fr;
+}
+
 .sidebar-collage img {
     width: 100%;
     height: 100%;
@@ -1786,6 +1790,10 @@ code {
 
 .sidebar-collage__bottomright {
     grid-area: 2 / 2 / 3 / 3;
+}
+
+.sidebar-collage__full {
+    grid-area: 1 / 1 / 3 / 3;
 }
 
 .sidebar-collage__button {
@@ -1857,4 +1865,27 @@ code {
     width: 94px;
     height: 94px;
     border-radius: 8px;
+}
+
+.sidebar-show__header {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.sidebar-show__header__title {
+    font-size: larger;
+    color: var(--text-primary);
+}
+
+.sidebar-show__header__summary {
+    cursor: pointer;
+}
+
+.sidebar-show__header__summary::marker {
+    color: var(--text-primary);
+}
+
+.sidebar-video-list details {
+    margin-bottom: 8px;
 }
