--- a/LightTube/Views/Youtube/Download.cshtml
+++ b/LightTube/Views/Youtube/Download.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 <p>
-	Model.Localization.GetString("download.format.select")
+	@Model.Localization.GetString("download.format.select")
 </p>
 
 <table>
